--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev --port 8000",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start --port 8000",
 		"lint": "next lint"
 	},
 	"dependencies": {
@@ -15,6 +15,7 @@
 		"clsx": "^2.1.0",
 		"framer-motion": "^11.0.3",
 		"next": "14.1.0",
+		"next-seo": "^6.4.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.0.1",
