--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@tanstack/react-query": "^5.17.19",
 		"axios": "^1.6.2",
 		"clsx": "^2.1.0",
+		"date-fns": "^3.3.1",
 		"framer-motion": "^11.0.3",
 		"next": "14.1.0",
 		"next-seo": "^6.4.0",
