--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
 		"next-seo": "^6.4.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-google-recaptcha": "^3.1.0",
+		"react-hook-form": "^7.50.0",
 		"react-icons": "^5.0.1",
 		"react-player": "^2.14.1",
+		"react-toastify": "^10.0.4",
 		"swiper": "^11.0.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-google-recaptcha": "^2.1.9",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.0",
