--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev --port 8000",
 		"build": "next build",
-		"start": "next start --port 8000",
+		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
